--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -3,7 +3,7 @@
   <head>
   <style>
     body{
-      background-color: #35001b;
+      background-color: #001f3f;
     }
   </style>
     <meta charset="utf-8">
